Fixing scrollbar

--- a/assets/css/rocket.css
+++ b/assets/css/rocket.css
@@ -557,7 +557,7 @@ hr {
   border-radius: 5px;
   text-align: left;
   padding: 20px 0 10px 0;
-  max-width: 100%;
+  width: 100%;
   overflow: auto;
 }
 
